# FastAPIBoilerPlate

./: .pre-commit-config.yaml  Dockerfile  Dockerfile.dockerignore  README.md  alembic.ini  dist.env  docker-compose.yaml  makefile  pyproject.toml
.github/workflows/: pull_request.yml
app/: lifespan.py  main.py
app/api/examples/: routes.py  schemas.py  service.py
app/api/health_checks/: routes.py
app/core/: config.py  database.py  enums.py  exception_handlers.py  lifespan.py
app/models/: __init__.py  example.py
migrations/: env.py
migrations/versions/: 2023-12-29-12-36_add_example_model.py
tests/: conftest.py  dependencies.py  factories.py
tests/api/: test_example.py  test_health_check.py
