[project]
name = "boilerplate"
version = "0.1.0"
description = "Add your description here"
authors = [
    "DenysMoskalenko <denys.moskalenko@nixs.com>",
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "alembic>=1.14.1",
    "fastapi>=0.115.8",
    "httpx>=0.28.1",
    "psycopg[binary]>=3.2.5",
    "pydantic-settings>=2.8.0",
    "pydantic[email]>=2.10.6",
    "sqlalchemy>=2.0.37",
    "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
    "coverage>=7.6.10",
    "httpx>=0.28.1",
    "polyfactory>=2.19.0",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "pytest-mock>=3.14.0",
    "ruff>=0.9.7",
]


[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
#filterwarnings = [
#    "ignore::DeprecationWarning:passlib",
#    "ignore::DeprecationWarning:jose"
#]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [
    #    Include ignore folders if needed
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E", # Errors
    "F", # Pyflakes
    "I", # isort
    "T20", # flake8-print
]
pydocstyle.convention = 'google'

[tool.ruff.lint.isort]
known-local-folder = ["tests", "app", "scripts"]
split-on-trailing-comma = true
combine-as-imports = true
case-sensitive = false
detect-same-package = true
order-by-type = false  # Sorting of all imported objects (functions, classes, etc.) regardless of their type
force-sort-within-sections = true  # Don't sort straight-style imports before from-style imports.
