[project]
name = "boilerplate"
version = "0.1.0"
description = "Add your description here"
authors = [
    "DenysMoskalenko <denys.moskalenko@nixs.com>",
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "alembic>=1.15.2",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "psycopg[binary]>=3.2.8",
    "pydantic-settings>=2.9.1",
    "pydantic[email]>=2.11.4",
    "sqlalchemy>=2.0.40",
    "uvicorn[standard]>=0.34.2",
]

[dependency-groups]
dev = [
    "ruff>=0.11.9",
    "pre-commit>=4.2.0",
    "coverage>=7.6.12",
    "httpx>=0.28.1",
    "polyfactory>=2.21.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]


[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
#filterwarnings = [
#    "ignore::DeprecationWarning:passlib",
#    "ignore::DeprecationWarning:jose"
#]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [
    #    Include ignore folders if needed
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E", # Errors
    "F", # Pyflakes
    "I", # isort
    "T20", # flake8-print
]
pydocstyle.convention = 'google'

[tool.ruff.lint.isort]
known-local-folder = ["tests", "app", "scripts"]
split-on-trailing-comma = true
combine-as-imports = true
case-sensitive = false
detect-same-package = true
order-by-type = false  # Sorting of all imported objects (functions, classes, etc.) regardless of their type
force-sort-within-sections = true  # Don't sort straight-style imports before from-style imports.
